<?xml version="1.0" encoding="utf-8"?>
<!--suppress NavigationFile -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appgimnasiotfg.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ejercicios"
        android:name="com.example.appgimnasiotfg.ui.ejercicios.EjerciciosFragment"
        android:label="@string/title_ejercicios"
        tools:layout="@layout/fragment_ejercicios" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.appgimnasiotfg.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>